src/tests/code/fail/fail_function_input_missing_variable_declaration_type.u
bogus: (v:)->(i64{1})